@@ -2050,6 +2050,7 @@ echol
 # development targets
 echol "makemake : makemake.in"
 echotab "./config.status --file=makemake"
+echotab "chmod +x makemake"
 echol
 echol "unixconf.h : unixconf.h.in"
 echotab "./config.status --header=unixconf.h"
@@ -3051,9 +3052,11 @@ else
   manualx_readline=''
 fi
 echol "READMES = ANNOUNCE COPYRIGHT GNU-GPL SUMMARY NEWS README README.de README.es"`if [ $TOS = unix ] ; then echol ' MAGIC.add' ; fi`
-echol "MANUALS = clisp.1 clisp.html \$(TXTFILES) impnotes.html clisp.png${manual_readline}"
+IMPNOTES_FILES="impnotes.html impnotes.css clisp.png";
+echol "IMPNOTES = ${IMPNOTES_FILES}"
+echol "MANUALS = clisp.1 clisp.html \$(TXTFILES) \$(IMPNOTES)${manual_readline}"
 echol
-for f in impnotes.html clisp.png ; do
+for f in ${IMPNOTES_FILES} ; do
   echol "${f} : ${DOCDIR_M}${f}"
   echotab "\$(CP) ${DOCDIR_M}${f} ${f}"
   echol
@@ -3509,7 +3512,7 @@ fi
 echotab "mkdir \$(TOPDIR)/data"
 echotab "${HLN} data/* \$(TOPDIR)/data"
 echotab "mkdir \$(TOPDIR)/doc"
-echotab "${HLN} clisp.1 clisp.man${manual_dvi} clisp.html \$(TXTFILES) impnotes.html clisp.png${manual_readline}${manualx_readline} \$(TOPDIR)/doc"
+echotab "${HLN} clisp.1 clisp.man${manual_dvi} clisp.html \$(TXTFILES) \$(IMPNOTES)${manual_readline}${manualx_readline} \$(TOPDIR)/doc"
 echotab "mkdir \$(TOPDIR)/src"
 echotab "${HLN} \$(LISPFILES) \$(FASFILES) \$(TOPDIR)/src"
 echotab "${HLN} clisp-link \$(TOPDIR)"
@@ -3551,6 +3554,8 @@ if [ $HSYS = acorn ] ; then
   echotab "-cdir ^.!Clisp.html"
   echotab "\$(CP) html.clisp ^.!Clisp.html.clisp"
   echotab "\$(CP) html.impnotes ^.!Clisp.html.impnotes"
+  echotab "\$(CP) css.impnotes ^.!Clisp.css.impnotes"
+  echotab "\$(CP) png.clisp ^.!Clisp.png.clisp"
   echotab "settype ^.!Clisp.html.clisp FAF"
   echotab "-cdir ^.!Clisp.txt"
   for f in $DOC; do
@@ -3588,7 +3593,7 @@ if [ $HOS = win32 ] ; then
   echotab "  cp -p \$\$f \$\$distdir/\$\$f ; \\"
   echotab "done ; \\"
   echotab "mkdir \$\$distdir/doc ; \\"
-  echotab "for f in clisp.1 clisp.man clisp.html \$(TXTFILES) impnotes.html clisp.png ; do \\"
+  echotab "for f in clisp.1 clisp.man clisp.html \$(TXTFILES) \$(IMPNOTES) ; do \\"
   echotab "  if test -f \$\$f ; then cp -p \$\$f \$\$distdir/doc/\$\$f ; else cp -p \`echo \$\$f | tr '[A-Z]' '[a-z]'\` \$\$distdir/doc/\$\$f ; fi ; \\"
   echotab "done ; \\"
   echotab "mkdir \$\$distdir/src ; \\"
@@ -3624,15 +3629,15 @@ fi
 cat <<!!
 	-rmdir ${TESTDIR}
 	-rmdir ${TESTSDIR}
-	-\$(RM) README README.de README.es clisp.1 clisp.man clisp.dvi clisp.html impnotes.html clisp.c distmakefile \$(TXTFILES) clreadline.3 clreadline.man clreadline.html clreadline.dvi readline.dvi
+	-\$(RM) README README.de README.es clisp.1 clisp.man clisp.dvi clisp.html \$(IMPNOTES) clisp.c distmakefile \$(TXTFILES)${manual_readline}${manualx_readline}
 
-# clean2 removes everything that becomes obsolete once lisp${LEXE} is recompiled
-# without changing the bytecode format.
+# clean2 removes everything that becomes obsolete once lisp${LEXE}
+# is recompiled without changing the bytecode format.
 clean2 : clean1
 	-\$(RM) $interpreted.mem $halfcompiled.mem lispinit.mem lispinit2.mem
 
-# clean3 removes everything that becomes obsolete once lisp${LEXE} is recompiled.
-# It leaves everything generated by "make allc".
+# clean3 removes everything that becomes obsolete once lisp${LEXE}
+# is recompiled. It leaves everything generated by "make allc".
 clean3 : clean2
 	-\$(RM) \$(FASFILES) *.lib
 
